--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-otp-input": "^3.0.2"
+    "react-otp-input": "^3.0.2",
+    "react-phone-number-input": "^3.2.25"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
